--- a/tox.ini
+++ b/tox.ini
@@ -10,3 +10,10 @@ deps =
 setenv =
   DJANGO_SETTINGS_MODULE=lazythumbs.tests.settings
 commands = py.test
+
+[testenv:docs]
+basepython=python
+changedir=docs
+deps=sphinx
+commands=
+    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envdir}/build/html
