--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     http://effbot.org/downloads/Imaging-1.1.7.tar.gz
 setenv =
   DJANGO_SETTINGS_MODULE=lazythumbs.tests.settings
-commands = py.test
+commands = py.test --pyargs lazythumbs
 
 [testenv:docs]
 basepython=python
