use Pillow instead of PIL

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps =
     django==1.3
     pytest
     mock
-    http://effbot.org/downloads/Imaging-1.1.7.tar.gz
+    Pillow
 setenv =
   DJANGO_SETTINGS_MODULE=lazythumbs.tests.settings
 commands = py.test --pyargs lazythumbs
