--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,10 @@ deps =
     pytest
     mock
     Pillow
+    pytest-cov
 setenv =
   DJANGO_SETTINGS_MODULE=lazythumbs.tests.settings
-commands = py.test --pyargs lazythumbs
+commands = py.test --cov lazythumbs --cov-report=term-missing lazythumbs
 
 [testenv:docs]
 basepython=python
