--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
-envlist =  py26
+envlist = py27-D13CUSTOM, py27-D13, py27-D14, py27-D15, py27-D16, py26-D13CUSTOM, py26-D13, py26-D14, py26-D15, py26-D16
 
-[testenv:py26]
+[testenv]
+commands = py.test lazythumbs
 deps =
     django==1.3
     pytest
@@ -11,6 +12,57 @@ deps =
 setenv =
   DJANGO_SETTINGS_MODULE=lazythumbs.tests.settings
 commands = py.test --cov lazythumbs --cov-report=term-missing lazythumbs
+
+[testenv:py27-D13CUSTOM]
+basepython = python2.7
+deps = {[testenv]deps}
+    Django==1.3
+
+[testenv:py27-D13]
+basepython = python2.7
+deps = {[testenv]deps}
+    Django>=1.3,<1.4
+
+[testenv:py27-D14]
+basepython = python2.7
+deps = {[testenv]deps}
+    Django>=1.4,<1.5
+
+[testenv:py27-D15]
+basepython = python2.7
+deps = {[testenv]deps}
+    Django>=1.5,<1.6
+
+[testenv:py27-D16]
+basepython = python2.7
+deps = {[testenv]deps}
+    Django>=1.6,<1.7
+
+
+[testenv:py26-D13CUSTOM]
+basepython = python2.6
+deps = {[testenv]deps}
+    Django==1.3
+
+[testenv:py26-D13]
+basepython = python2.6
+deps = {[testenv]deps}
+    Django>=1.3,<1.4
+
+[testenv:py26-D14]
+basepython = python2.6
+deps = {[testenv]deps}
+    Django>=1.4,<1.5
+
+[testenv:py26-D15]
+basepython = python2.6
+deps = {[testenv]deps}
+    Django>=1.5,<1.6
+
+[testenv:py26-D16]
+basepython = python2.6
+deps = {[testenv]deps}
+    Django>=1.6,<1.7
 
 [testenv:docs]
 basepython=python
