--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-D13CUSTOM, py27-D13, py27-D14, py27-D15, py27-D16, py26-D13CUSTOM, py26-D13, py26-D14, py26-D15, py26-D16
+envlist = py27-D13CUSTOM, py27-D13, py27-D14, py27-D15, py27-D16, py26-D13CUSTOM, py26-D13, py26-D14, py26-D15, py26-D16, py26, py27
 
 [testenv]
 commands = py.test --cov lazythumbs --cov-report=term-missing lazythumbs
@@ -12,6 +12,11 @@ setenv =
     DJANGO_SETTINGS_MODULE=lazythumbs.tests.settings
 
 [testenv:py27-D13CUSTOM]
+basepython = python2.7
+deps = {[testenv]deps}
+    Django==1.3
+
+[testenv:py27]
 basepython = python2.7
 deps = {[testenv]deps}
     Django==1.3
@@ -38,6 +43,11 @@ deps = {[testenv]deps}
 
 
 [testenv:py26-D13CUSTOM]
+basepython = python2.6
+deps = {[testenv]deps}
+    Django==1.3
+
+[testenv:py26]
 basepython = python2.6
 deps = {[testenv]deps}
     Django==1.3
